--- a/.gitignore
+++ b/.gitignore
@@ -509,6 +509,7 @@ src/.ninja_log
 src/compile_commands.json
 
 # Build Artifacts
+src/lib/public/linux*/fgdlib.a
 src/lib/public/linux*/mathlib.a
 src/lib/public/linux*/matsys_controls.a
 src/lib/public/linux*/raytrace.a
